medi7100/css/customStyles.css
.alert:not(.pattern-library-shim){
color: var(--bs-alert-color) !important;
margin-bottom: var(--bs-alert-margin-bottom) !important;  
}
.xmodule_display.xmodule_HtmlBlock i, i{
  font-style: unset !important;
}
/*.xmodule_display.xmodule_HtmlBlock .table th{
 background: var(--bs-table-bg) !important;
}*/
div.accordion h2{
  margin: 0px !important;
}
a.btn-uq, a.btn-primary, a.btn-dark, a.btn-danger, a.btn-success, a.btn-secondary{
  color: #fff !important;
}
div.alert p, div.alert h1, div.alert h2, div.alert h3, div.alert h4, div.alert h5, div.alert h6{
  color: inherit !important;
}
.tooltip::after{
content: none !important;
}
.tooltip{
border-style: none !important;
}
.uq-icon{
  background-size: 30px;
  background-position: left center;
  background-repeat: no-repeat;
  padding-left: 45px;
  margin-left: 5px; 
}
.purple-banner{
  background-color: #51247a;
  padding: 10px 5px;
}
.purple-banner span{
  color: #fff;
}
.grey-banner{
  background-color: #f8f8ff;
  padding: 10px 5px; 
}
.grey-banner span{
  color: #000
}
.blue-banner{
  background-color:#3C7B9A;
  padding: 10px 5px; 
}
.blue-banner span{
  color: #fff;
}
.icon-jigsaw-white{
  background-image: url('static/activities-white.png');
}
.icon-jigsaw-alt-white{
  background-image: url('/uqlearnx/img/white_activity.png');
}
.icon-clinical-comms-white{
  background-image: url('/uqlearnx/img/clinical-comms-white.png');
}
.icon-diff-diagnosis-white{
  background-image: url('/uqlearnx/img/differential-diagnosis-white.png');
}
.icon-examination-white{
  background-image: url('/uqlearnx/img/examination-white.png');
}
.icon-follow-up-white{ 
  background-image: url('/uqlearnx/img/follow-up-white.png');
}
.icon-group-activity-white{
  background-image: url('/uqlearnx/img/group-activity-white.png');
}
.icon-herston-white{ 
  background-image: url('/uqlearnx/img/herston-white.png');
}
.icon-initial-mgmt-1-white{
  background-image: url('/uqlearnx/img/initial-mgmt-1-white.png');
}
.icon-initial-mgmt-2-white{
  background-image: url('/uqlearnx/img/initial-mgmt-2-white.png');
}
.icon-initial-mgmt-3-white{
  background-image: url('/uqlearnx/img/initial-mgmt-3-white.png');
}
.icon-initial-mgmt-4-white{
  background-image: url('/uqlearnx/img/initial-mgmt-4-white.png');
}
.icon-investigations-white{
  background-image: url('/uqlearnx/img/investigations-white.png');
}
.icon--white{
  background-image: url('/uqlearnx/img/');
}
.icon-anatomy-white{
  background-image: url('/uqlearnx/img/white_anatomy.png');
}
.icon-epi-white{
  background-image: url('/uqlearnx/img/white_epi.png');
}
.icon-histology-white{
  background-image: url('/uqlearnx/img/white_histology.png');
}
.icon-pathophysiology-white{
  background-image: url('/uqlearnx/img/white_pathophysiology.png');
}
.icon-report-white{
background-image: url('/uqlearnx/img/white_report.png');
}
.icon-report-white{
background-image: url('/uqlearnx/img/white_report.png');
}
.icon-checklist-quiz-white{
  background-image: url('/uqlearnx/img/quiz-white.png');
}
.icon-magnifying-glass-white{
  background-image: url('/uqlearnx/img/explore-white.png');
}
.icon-book-white{
  background-image: url('/uqlearnx/img/book-white.png');
}   
.icon-discuss-white{
  background-image: url('/uqlearnx/img/discuss-white.png');
} 
.icon-timer-white{
  background-image: url('/uqlearnx/img/timer-white.png');
} 
.icon-video-white{
  background-image: url('/uqlearnx/img/video-white.png');
}
.icon-thought-white{
  background-image: url('/uqlearnx/img/think-white.png')
}
.icon-pencil-white{
  background-image: url('/uqlearnx/img/notes-white.png')
}
.icon-link-white{
  background-image: url('/uqlearnx/img/link-white.png')
}
.icon-group-white{
  background-image: url('/uqlearnx/img/group-white.png')
}
.icon-podcast-white{
  background-image: url('/uqlearnx/img/podcast-white.png')
}
.icon-arrow-circle-white{
  background-image: url('/uqlearnx/img/future-white.png')
}
.icon-cogs-white{
  background-image: url('/uqlearnx/img/cogs-white.png')
}
.icon-lightbulb-white{
  background-image: url('/uqlearnx/img/example-white.png');
  background-size: 25px;
}
.icon-list-white{
  background-image: url('/uqlearnx/img/summary-white.png')
}
.icon-alert-circle-white{
  background-image: url('/uqlearnx/img/alert-white.png')
}
.icon-alert-triangle-white{
  background-image: url('/uqlearnx/img/important-white.png')
}
.icon-globe-white{
  background-image: url('/uqlearnx/img/world-white.png')
}
.icon-video-camera-white{
  background-image: url('/uqlearnx/img/video_camera_white.png')
}
.icon-blooms-understanding-white{
  background-image: url('/uqlearnx/img/blooms-understanding-white.png')
}
.icon-jigsaw-black{
  background-image: url('/uqlearnx/img/activities-black.png');
}
.icon-jigsaw-alt-black{
  background-image: url('/uqlearnx/img/activity_2_black.png');
}
.icon-anatomy-black{
  background-image: url('/uqlearnx/img/anatomy_black.png');
}
.icon-epi-black{
  background-image: url('/uqlearnx/img/epi_black.png');
}
.icon-histology-black{
  background-image: url('/uqlearnx/img/histology_black.png');
}
.icon-pathophysiology-black{
  background-image: url('/uqlearnx/img/pathophysiology_black.png');
}
.icon-report-black{
  background-image: url('/uqlearnx/img/report_black.png');
}
.icon-checklist-quiz-black{
  background-image: url('/uqlearnx/img/quiz-black.png');
}
.icon-magnifying-glass-black{
  background-image: url('/uqlearnx/img/explore-black.png');
}
.icon-book-black{
  background-image: url('/uqlearnx/img/book-black.png');
}   
.icon-discuss-black{
  background-image: url('/uqlearnx/img/discuss-black.png');
} 
.icon-timer-black{
  background-image: url('/uqlearnx/img/timer-black.png');
} 
.icon-video-black{
  background-image: url('/uqlearnx/img/video-black.png');
}
.icon-thought-black{
  background-image: url('/uqlearnx/img/think-black.png')
}
.icon-pencil-black{
  background-image: url('/uqlearnx/img/notes-black.png')
}
.icon-link-black{
  background-image: url('/uqlearnx/img/link-black.png')
}
.icon-group-black{
  background-image: url('/uqlearnx/img/group-black.png')
}
.icon-podcast-black{
  background-image: url('/uqlearnx/img/podcast-black.png')
}
.icon-arrow-circle-black{
  background-image: url('/uqlearnx/img/future-black.png')
}
.icon-cogs-black{
  background-image: url('/uqlearnx/img/cogs-black.png')
}
.icon-lightbulb-black{
  background-image: url('/uqlearnx/img/example-black.png');
  background-size: 25px;
}
.icon-list-black{
  background-image: url('/uqlearnx/img/summary-black.png')
}
.icon-alert-circle-black{
  background-image: url('/uqlearnx/img/alert-black.png')
}
.icon-alert-triangle-black{
  background-image: url('/uqlearnx/img/important-black.png')
}
.icon-globe-black{
  background-image: url('/uqlearnx/img/world-black.png')
}
.icon-herston-black{
 background-image: url('/uqlearnx/img/herston-black.png')
}
.icon-herston-purple{
 background-image: url('/uqlearnx/img/herston-purple.png')
}

